--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "author": "Aniket D <aniketdevadas@gmail.com>",
     "license": "ISC",
     "devDependencies": {
+        "@types/config": "^3.3.3",
+        "@types/cookie-parser": "^1.4.6",
         "@types/express": "^4.17.17",
         "@types/http-errors": "^2.0.1",
         "@types/jest": "^29.5.4",
@@ -46,14 +48,16 @@
         ]
     },
     "dependencies": {
-        "@types/config": "^3.3.3",
         "config": "^3.3.12",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
         "express": "^4.18.2",
+        "express-jwt": "^8.4.1",
         "express-validator": "^7.0.1",
         "http-errors": "^2.0.0",
         "js-yaml": "^4.1.0",
+        "jwks-rsa": "^3.1.0",
         "mongoose": "^8.1.2",
         "uuid": "^9.0.1",
         "winston": "^3.10.0"
